--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9, <4.0"
+python = ">=3.11, <4.0"
 click-logging = "^1.0.1"
 requests = ">=2.32.4"
-urllib3 = ">=2.5.0"
+urllib3 = ">=2.6.3"
+pandas = "^3.0.0"
+click = "^8.3.1"
+lark = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -77,12 +80,12 @@ include = '\.pyi?$'
 pythonpath = [
     "src"
 ]
-addopts = """\
-    --cov malcolm3utils \
-    --cov tests \
-    --cov-report term-missing \
-    --no-cov-on-fail \
-"""
+#addopts = """\
+#    --cov malcolm3utils \
+#    --cov tests \
+#    --cov-report term-missing \
+#    --no-cov-on-fail \
+#"""
 
 [tool.coverage.report]
 fail_under = 100
