Added filter script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,3 +117,4 @@ replace = '__version__ = "{new_version}"'
 touch_latest = 'malcolm3utils.scripts.touch_latest:touch_latest'
 getcol = 'malcolm3utils.scripts.getcol:getcol'
 merge = 'malcolm3utils.scripts.merge:merge'
+filter = 'malcolm3utils.scripts.filter:cli'
